force-app/main/default/objects/Reference_Check__c/Reference_Check__c.object-meta.xml
<CustomObject>
    <description>Stores fellow applications reference checks integrated with FormAssembly</description>
    <label>Reference Check</label>
    <nameField>
        <label>Reference Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>