force-app/main/default/objects/Reference_Check__c/fields/Applicant_Strengths__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Strengths__c</fullName>
    <inlineHelpText>In 1-2 sentences, how would you characterize the applicant&apos;s strengths? What would you say is this applicant&apos;s area for growth related to their professional development?</inlineHelpText>
    <label>Applicant Strengths and Weaknesses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>