force-app/main/default/objects/Reference_Check__c/fields/Applicant_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Supervisor__c</fullName>
    <inlineHelpText>Were you in the role of manager of supervisor of this applicant?</inlineHelpText>
    <label>Applicant Supervisor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>