force-app/main/default/objects/Reference_Check__c/fields/Would_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Would_Recommend__c</fullName>
    <description>Overall, would you recommend this person?</description>
    <inlineHelpText>Overall, would you recommend this person?</inlineHelpText>
    <label>Would Recommend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>